# SIMple-Mechanics

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  imgui.ini
docs/: CNAME  index.html  simple_mechanics.js  simple_mechanics_bg.wasm
lua/: bounce.lua  can-it-lab.lua  collision_fn.lua  collision_fn_1D.lua  collisionlab.lua  flappy_bird.lua  grid.lua  init.lua  integrate.lua  other.lua  pinball.lua  scene.lua  test.lua  wave.lua
scripts/: build-web.sh
src/: components.rs  draw.rs  gui.rs  lua.rs  main.rs  main_state.rs  physics.rs  resources.rs  systems.rs  types.rs  ui.rs
src/gui/: draw_creation_gui_sys.rs  graphs.rs  gui_systems.rs  imgui_wrapper.rs  mod.rs  signals.rs  systems.rs  ui.rs
src/gui/systems/: graph_transform_sys.rs  line_graph_sys.rs  min_max_graph_sys.rs  selected_move_sys.rs
src/lua/: collide_fn_sys.rs  update_fn_sys.rs
src/main_state/: body_builder.rs  draw_shape_sys.rs  draw_sys.rs  event_handler.rs  physics_sys.rs  screen_resize_sys.rs  util.rs
src/ui/: body_creation.rs
