[package]
name = "physics-engine-v2"
version = "0.1.0"
authors = ["Mikail Khan <mikail.khan45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21"
ncollide2d = "0.23"
nphysics2d = "0.15.1"

ggez = "0.5.1"
specs = { version = "0.15.1", features = ["specs-derive"] }

smallvec = "1.4.0"

rlua = "0.17.0"

gfx_core = "0.9"
gfx_device_gl = "0.16"
imgui = "0.2.0"
imgui-gfx-renderer = "0.2.0"

[profile.dev.package."*"]
opt-level = 3
